# gbf-autoplay

./: LICENSE  daily.py  event.py  permanent.py  play.py  proving_grounds.py  pyproject.toml  revival_event.py  rise_of_the_beasts.py  showdowns.py  story_event.py  unite_and_fight.py  utils.py
battle/: __init__.py  base.py  battle.py  discover.py  discover_chain.py  tactics.py
battle/event/: __init__.py  base.py  proving_grounds.py  revival_event.py  rise_of_the_beasts.py  showdowns.py  story_event.py  unite_and_fight.py
battle/permanent/: magna_1.py  quest.py
event/: __init__.py  base.py  dread_barrage.py  proving_grounds.py  revival_event.py  rise_of_the_beasts.py  showdowns.py  story_event.py  unite_and_fight.py
non_battle/: __init__.py  skip_hard.py
non_battle/casino/: __init__.py  cage.py
non_battle/gacha/: gacha.py
non_battle/shop/: journey_drops.py  treasure_trade.py
