[tool.poetry]
name = "gbf-autoplay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
yapf = "^0.30.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
